--- a/RayTracingInOneWeekend/CMakeLists.txt
+++ b/RayTracingInOneWeekend/CMakeLists.txt
@@ -7,4 +7,4 @@ project(${PROJECT_NAME})
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(RayTracingInOneWeekend main.cpp)
+add_executable(${PROJECT_NAME} main.cpp)
